# accelscope

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: benchmark.yml  bug_report.yml
docs/: BUILD.md  CAPABILITY_PROFILER.md  COMMUNITY_BENCHMARKS.md  MODEL_INSPECTOR.md  MODEL_PACKS.md  PRODUCT.md  QUICKSTART.md  RECOMMENDATION_ENGINE.md  ROUTING_MANIFEST.md  TUI.md
examples/: benchmark-intel-core-ultra-5-125h.md
scripts/: build_exe.ps1
src/ai_pc_kit/: __init__.py  backends.py  capabilities.py  catalog.py  cli.py  compatibility.py  inspectors.py  interactive.py  model_inspector.py  model_zoo.py  recommendations.py  reports.py  routing.py  runner.py  runtimes.py  tui.py
tests/: test_backends.py  test_capability_profiler.py  test_catalog.py  test_cli.py  test_inspectors.py  test_interactive.py  test_model_inspector.py  test_reports.py  test_routing.py  test_runtimes.py  test_tui.py
